Fix so all minecraft versions are supported again